corrections alignement + images

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 /*  HEADER  */
 header {
-  background-color: lightgreen;
+  /* background-color: lightgreen; */
 }
 
 nav {
@@ -47,7 +47,7 @@ nav {
 
 /**********************  MAIN  ********************/
 main {
-  background-color: lightskyblue;
+  /* background-color: lightskyblue; */
 }
 
 main > * {
@@ -100,41 +100,37 @@ li {
 
 .hebergements h2 {
   width: 100%;
-  margin-bottom: 20px;
 }
 
 .hebergement_container,
 .populaires_container {
-  padding: 20px;
+  padding: 20px 0px 20px 20px;
   border-radius: 20px;
+  background-color: #f2f2f2;
 }
 .hebergement_container {
   display: flex;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
+  align-content: flex-start;
   margin-right: 20px;
-  background-color: lightgrey;
 }
 
 .carte_hebergement {
-  width: 220px;
-  height: 180px;
+  width: 300px;
+  height: 220px;
   border: solid black 1px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px;
   margin: 20px 20px 20px 0px;
 }
 
-.populaires_container {
-  background-color: blanchedalmond;
-}
-
 .carte_populaires {
-  width: 250px;
+  width: 400px;
   height: 200px;
   border: solid black 1px;
   border-radius: 25px;
   box-shadow: 0px 0px 10px;
+  margin: 20px 20px 20px 0px;
 }
 /* box-shadow: none|h-offset v-offset blur spread color 
 |inset|initial|inherit; */
